[DLAB-1094]: prevent extra scrollbar on create notebook dialog

--- a/services/self-service/src/main/resources/webapp/src/app/resources/exploratory/create-environment/create-environment.component.scss
+++ b/services/self-service/src/main/resources/webapp/src/app/resources/exploratory/create-environment/create-environment.component.scss
@@ -64,7 +64,7 @@
 }
 
 .content-box {
-  max-height: 560px;
+  max-height: 580px;
   overflow-y: auto;
 }
 
