--- a/services/self-service/src/main/resources/webapp/src/app/shared/time-picker/time-picker.component.scss
+++ b/services/self-service/src/main/resources/webapp/src/app/shared/time-picker/time-picker.component.scss
@@ -161,8 +161,6 @@
 }
 
 .ticker-wrap {
-  height: 100%;
-
   .ticker {
     width: 200px;
     height: 200px;
